fix: modify vertical spacing between article paragraphs.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -454,6 +454,9 @@ td {
   cursor: col-resize;
 }
 
+.article p {
+  margin: 1em 0;
+}
 
 .article h1 {
   display: block;
